--- a/styles.css
+++ b/styles.css
@@ -60,6 +60,7 @@ h3.navlink:hover {
 
 .greeting {
     font-size: 30px;
+    margin: 10px;
 }
 
 .page {
@@ -69,116 +70,8 @@ h3.navlink:hover {
     display: none;
 }
 
-.aboutimage {
-    height: 5%;
-    width: 5%;
-}
-
-* {
-    box-sizing: border-box;
-}
-
-/* Position the image container (needed to position the left and right arrows) */
-.gallerycontainer {
-    position: relative;
-    width: 300px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
-
-/* Hide the images by default */
-.mySlides {
-    display: none;
-}
-
-/* Add a pointer when hovering over the thumbnail images */
-.cursor {
-    cursor: pointer;
-}
-
-/* Next & previous buttons */
-.prev,
-.next {
-    cursor: pointer;
-    position: absolute;
-    top: 40%;
-    width: auto;
-    padding: 16px;
-    margin-top: -50px;
-    color: white;
-    font-weight: bold;
-    font-size: 20px;
-    border-radius: 0 3px 3px 0;
-    user-select: none;
-    -webkit-user-select: none;
-}
-
-/* Position the "next button" to the right */
-.next {
-    right: 0;
-    border-radius: 3px 0 0 3px;
-}
-
-/* Position the "prev button" to the left */
-.prev {
-    left: 0;
-    border-radius: 3px 0 0 3px;
-}
-
-.prev:hover,
-.next:hover {
-    color: rgba(223, 223, 223, 0.8);
-}
-
-/* Number text (1/3 etc) */
-.numbertext {
-    color: #f2f2f2;
-    font-size: 12px;
-    padding: 8px 12px;
-    position: absolute;
-    top: 0;
-}
-
-/* Container for image text */
-.caption-container {
-    text-align: center;
-    padding: 2px 16px;
-}
-
-.row:after {
-    content: "";
-    display: table;
-    clear: both;
-}
-
-.row {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-}
-
-/* 5 columns side by side */
-.column {
-    float: left;
-    width: 20%;
-}
-
-/* Add a transparency effect for thumnbail images */
-.demo {
-    padding: 2px;
-    opacity: 0.6;   
-}
-
-.active,
-.demo:hover {
-    opacity: 1;
-}
-
-.artworkimage {
-    width: 25%;
-    height: 25%;
+.pageimage {
+    height: 50px;
 }
 
 .maingallery {
@@ -203,24 +96,20 @@ h3.navlink:hover {
     width: 200px;
 }
 
-img.galleryimagelong, img.galleryimage{
-    transition: transform .05s ease-in-out;
+p.contactlink {
+    transition: transform .1s ease-in-out;
     transform-origin: bottom left;
+    font-weight: bold;
 }
 
-img.galleryimagelong:hover, img.galleryimage:hover {
-    transform: rotate(-1deg);
+p.contactlink:hover {
+    transform: rotate(-0.2deg);
 }
 
-img.galleryimagelong:active, img.galleryimage:active {
-    height: 200%;
+.contactdivider {
+    margin: 20px;
 }
 
-#btnControl {
-    display: none;
-}
-
-#btnControl:checked + label > img {
-    width: 70px;
-    height: 74px;
+.contactmessage {
+    font-style: italic;
 }
