--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=IM+Fell+Great+Primer:ital@0;1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300&display=swap');
 
 body {
     background-color: black;
@@ -6,6 +7,7 @@ body {
     letter-spacing: 2px;
     color: white;
     margin: 0;
+    position: relative;
 }
 
 a {
@@ -22,6 +24,7 @@ a {
 
 .title {
     width: 450px;
+    margin-right: 10px;
 }
 
 .name {
@@ -38,15 +41,19 @@ a {
     display: flex; 
     flex-direction: row;
     flex-wrap: nowrap;
-    justify-content: flex-end;
     width: 100%;
+}
 
-    margin-top: -15px;
+.linkParentMobile {
+    position:fixed; 
+    bottom: 0; 
+    width: 100%;
+    background-color: black;
 }
 
 .navlink {
-    margin-left: 20px;
-    
+    margin-left: 10px;
+    margin-right: 10px;   
 }
 
 h3.navlink{
@@ -68,6 +75,7 @@ h3.navlink:hover {
     padding-top: 0px;
     text-align: center;
     display: none;
+    margin-bottom: 60px;
 }
 
 .pageimage {
@@ -112,4 +120,18 @@ p.contactlink:hover {
 
 .contactmessage {
     font-style: italic;
+}
+
+.aboutinfo {
+    text-align: left;
+    justify-content: center;
+    margin: 0 auto;
+    margin-top: 30px;
+    max-width: 700px;
+}
+
+.easyreading {
+    font-family: 'Hind Siliguri', sans-serif;
+    line-height: 20px;
+    text-indent: 10px;
 }
