--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,8 @@ a {
 
 .navlink {
     margin-left: 10px;
-    margin-right: 10px;   
+    margin-right: 10px;  
+    cursor: pointer; 
 }
 
 h3.navlink{
@@ -97,11 +98,25 @@ h3.navlink:hover {
 .galleryimage {
     margin: 10px;
     width: 150px;
+    transition: transform .1s ease-in-out;
+    transform-origin: bottom left;
+    cursor: pointer;
 }
 
 .galleryimagelong {
     margin: 10px;
     width: 200px;
+    transition: transform .1s ease-in-out;
+    transform-origin: bottom left;
+    cursor: pointer;
+}
+
+.galleryimage:hover {
+    transform: rotate(-1deg);
+}
+
+.galleryimagelong:hover {
+    transform: rotate(-1deg);
 }
 
 p.contactlink {
@@ -135,3 +150,102 @@ p.contactlink:hover {
     line-height: 20px;
     text-indent: 10px;
 }
+
+
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    -webkit-animation-name: fadeIn; /* Fade in the background */
+    -webkit-animation-duration: 0.4s;
+    animation-name: fadeIn;
+    animation-duration: 0.4s
+  }
+  
+  /* Modal Content */
+  .modal-content {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+
+    width: 80%;
+    background-color: black;
+    height: 80%;
+    border: 1px solid white;
+    margin: 10px;
+
+    -webkit-animation-name: slideIn;
+    -webkit-animation-duration: 0.4s;
+    animation-name: slideIn;
+    animation-duration: 0.4s
+  }
+
+  @media (max-width: 545px) {
+    .modal-content {
+        position: absolute;
+        top: initial;
+        bottom: 0;
+        left: 0;
+        transform: translate(0%,0%);
+    
+        width: 99%;
+        margin: 0;
+    
+      }    
+    }
+  
+  /* The Close Button */
+  .close {
+    color: white;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  
+  .modal-header {
+    padding: 2px 16px;
+    color: white;
+    border-bottom: 1px solid white;
+  }
+  
+  .modal-body {
+      padding: 2px 16px;
+    }
+  
+  /* Add Animation */
+  @-webkit-keyframes slideIn {
+    from {bottom: -300px; opacity: 0} 
+    to {bottom: 0; opacity: 1}
+  }
+  
+  @keyframes slideIn {
+    from {bottom: -300px; opacity: 0}
+    to {bottom: 0; opacity: 1}
+  }
+  
+  @-webkit-keyframes fadeIn {
+    from {opacity: 0} 
+    to {opacity: 1}
+  }
+  
+  @keyframes fadeIn {
+    from {opacity: 0} 
+    to {opacity: 1}
+  }
