--- a/styles.css
+++ b/styles.css
@@ -119,6 +119,39 @@ h3.navlink:hover {
     transform: rotate(-1deg);
 }
 
+.galleryproject {
+    margin: 50px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    width: 250px;
+}
+
+.projectimage {
+    width: 250px;
+    height: 125px;
+    top: 0;
+    cursor: pointer;
+    object-fit: cover;
+    transition: transform .1s ease-in-out;
+    transform-origin: bottom left;
+}
+
+.projectimage:hover {
+    transform: rotate(-0.5deg);
+}
+
+.projecttext {
+    margin-top: 10px;
+    height: 50px;
+    cursor: pointer;
+    transition: transform .1s ease-in-out;
+    transform-origin: bottom left;
+}
+
+.projecttext:hover {
+    transform: rotate(-0.5deg);
+}
+
 p.contactlink {
     transition: transform .1s ease-in-out;
     transform-origin: bottom left;
