--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@ a {
     flex-direction: row;
     flex-wrap: nowrap;
     padding: 30px;
+    padding-bottom: 10px;
 }
 
 .title {
@@ -85,6 +86,7 @@ h3.navlink:hover {
 
 .maingallery {
     margin: 40px;
+    margin-top: 0px;
 }
 
 .galleryrow {
@@ -164,17 +166,22 @@ p.contactlink:hover {
 
 .contactdivider {
     margin: 20px;
+    position:relative;
+    top:3px;
+}
+
+.date-time {
+    margin-top: 10px;
 }
 
 .contactmessage {
     font-style: italic;
 }
 
-.aboutinfo {
+.info {
     text-align: left;
     justify-content: center;
     margin: 0 auto;
-    margin-top: 30px;
     max-width: 700px;
 }
 
