--- a/styles.css
+++ b/styles.css
@@ -203,6 +203,7 @@ p.contactlink:hover {
     width: 100%; /* Full width */
     height: 100%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
+    
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
     -webkit-animation-name: fadeIn; /* Fade in the background */
@@ -276,7 +277,7 @@ p.contactlink:hover {
 
     .modal-img {
         height: 70%;
-        margin: 30px;
+        margin-top: 30px;
     }
   
     /* Add Animation */
