--- a/styles.css
+++ b/styles.css
@@ -277,16 +277,17 @@ p.contactlink:hover {
     }
 
     .modal-img {
-        max-width:50%;
-        min-width: 100px;
-        height: auto;
+        width: auto;
+        height: 70%;
         margin-top: 30px;
         margin-bottom: 30px;
     }
 
     @media (max-width: 545px) {
         .modal-img {
-            max-width:70%;
+            max-width:50%;
+            min-width: 100px;
+            height: auto;
         }
     }
   
