--- a/styles.css
+++ b/styles.css
@@ -131,7 +131,7 @@ h3.navlink:hover {
 
 .projectimage {
     width: 250px;
-    height: 125px;
+    height: 130px;
     top: 0;
     cursor: pointer;
     object-fit: cover;
@@ -145,10 +145,16 @@ h3.navlink:hover {
 
 .projecttext {
     margin-top: 10px;
+    margin-bottom: 10px;
     height: 50px;
     cursor: pointer;
     transition: transform .1s ease-in-out;
     transform-origin: bottom left;
+    display: table-cell; 
+    text-align: center;
+    width: 250px;
+    height: 60px;
+    vertical-align: middle;
 }
 
 .projecttext:hover {
