--- a/styles.css
+++ b/styles.css
@@ -216,7 +216,7 @@ p.contactlink:hover {
     top: 0;
     width: 100%; /* Full width */
     height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
+    overflow: hidden; 
     
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
@@ -291,13 +291,17 @@ p.contactlink:hover {
         height: 70%;
         margin-top: 30px;
         margin-bottom: 30px;
+        overflow: scroll;
     }
 
     .modal-meat {
         display: none;
+        text-align: left;
+        margin: 30px;
     }
 
     .modal-img {
+        display: none;
         width: auto;
         height: 70%;
         margin-top: 30px;
