--- a/styles.css
+++ b/styles.css
@@ -106,6 +106,12 @@ h3.navlink:hover {
     cursor: pointer;
 }
 
+.modalimage {
+    margin: 10px;
+    width: 150px;
+    cursor: pointer;
+}
+
 .galleryimagelong {
     margin: 10px;
     width: 200px;
@@ -259,7 +265,7 @@ p.contactlink:hover {
     
         width: 99%;
         margin: 0;
-    
+        overflow: scroll;
       }    
     }
   
@@ -288,9 +294,8 @@ p.contactlink:hover {
   
     .modal-body {
         width: auto;
-        height: 70%;
-        margin-top: 30px;
-        margin-bottom: 30px;
+        height: 80%;
+        padding-bottom: 40px;
         overflow: scroll;
     }
 
@@ -314,6 +319,31 @@ p.contactlink:hover {
             min-width: 100px;
             height: auto;
         }
+    }
+
+    .modal-video {
+        width: 350px;
+        height: 200px;
+        display: block;
+        margin: 15px 0px;
+    }
+
+    .modal-item {
+        justify-content: center;
+        text-align:center;
+        height: 250px;
+    }
+
+    .modal-video-item {
+        justify-content: center;
+        text-align:center;
+        height: 270px;
+    }
+
+    .modal-item-info {
+        font-size: 12px;
+        max-width: 200px;
+        margin: auto;
     }
   
     /* Add Animation */
