--- a/styles.css
+++ b/styles.css
@@ -216,6 +216,17 @@ h3.navlink:hover {
     text-indent: 10px;
 }
 
+.easylink {
+    transition: transform .1s ease-in-out;
+    transform-origin: bottom left;
+    cursor: pointer;
+    display: inline-block;
+    font-style: italic;
+}
+
+.easylink:hover {
+    transform: rotate(-3deg);
+}
 
 /* The Modal (background) */
 .modal {
@@ -370,3 +381,101 @@ h3.navlink:hover {
         from {opacity: 0} 
         to {opacity: 1}
     }
+
+ 
+ .timeline-container {
+    width: 95%;
+    padding: 20px 0;
+    margin: 20px auto;
+    position: relative;
+    overflow: hidden;
+ }
+ 
+ .timeline-container:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 50%;
+    margin-left: -1px;
+    width: 2px;
+    height: 100%;
+    background-image: linear-gradient(black, white 2%, white 98%, black 100%);
+    z-index: -1; /* so it sits behind .marker */
+ }
+ 
+ .timeline-block {
+    width: -webkit-calc(50% + 6.5px);
+    width: -moz-calc(50% + 6.5px);
+    width: calc(50% + 6.5px);
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: flex;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+    -moz-box-pack: justify;
+    justify-content: space-between;
+    clear: both;
+ }
+ 
+ .timeline-block-right {
+    float: right;
+ }
+ 
+ .timeline-block-left {
+    float: left;
+    direction: rtl
+ }
+ 
+ .marker {
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    border: 2px solid white;
+    background-color: black;
+    margin-top: 10px;
+ }
+ 
+ .timeline-content {
+    width: 95%;
+    padding: 0 15px;
+    direction: ltr;
+ }
+ 
+ .timeline-content h3 {
+    margin-top: 5px;
+    margin-bottom: 5px;
+    font-size: 25px;
+    font-weight: 500
+ }
+ 
+ .timeline-content span {
+    font-size: 15px;
+ }
+ 
+ .timeline-content p {
+    font-size: 14px;
+    word-spacing: 1px;
+    font-family: 'Hind Siliguri', sans-serif;
+    line-height: 20px;
+ }
+ 
+ @media screen and (max-width: 768px) {
+    .timeline-container:before {
+       left: 6.5px;
+       width: 2px;
+    }
+    .timeline-block {
+       width: 100%;
+       margin-bottom: 30px;
+    }
+    .timeline-block-right {
+       float: none;
+    }
+ 
+    .timeline-block-left {
+       float: none;
+       direction: ltr;
+    }
+ }
+ 
